--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,12 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 #mysql workerben
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qlhs
+# spring.datasource.url=jdbc:mysql://127.0.0.1:3306/qlhs
 #php admin
 spring.datasource.url=jdbc:mysql://localhost:3306/qlhs
 spring.datasource.username=root
-#spring.datasource.password=123456
-spring.datasource.password=
+# spring.datasource.password=123456
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
