--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
   spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-  spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=TestDB;encrypt=true;trustServerCertificate=true;useUnicode=true;characterEncoding=UTF-8
+  spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName=HieuSach;encrypt=true;trustServerCertificate=true;useUnicode=true;characterEncoding=UTF-8
   spring.datasource.username=sa
   spring.datasource.password=123456
   spring.jpa.show-sql=true
