--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,9 +6,10 @@
 #  spring.jpa.hibernate.ddl-auto=update
 #  spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2008Dialect
 #mysql workerben
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/hieusach
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.application.name=Test
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
